<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:title="@string/switch_list"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_grid"
        android:icon="@drawable/ic_grid"
        android:visible="false"
        android:title="@string/switch_grid"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:visible="false"
        android:icon="@drawable/ic_favorite_outline"
        android:title="@string/favorites"
        android:checkable="true"
        app:showAsAction="ifRoom" />

</menu>